# file-to-qr-code-gif

./: .gitignore  LICENSE  README.md  demo.txt  deno.json
.github/workflows/: gh-pages.yml
docs/: index.3996b14caf0b017a35dea73979a9af8d.js  index.782a30cb82b0dc4e6b475420136b0d89.js  index.988d9788b2b5bb7dd1c26c47477eeed7.js  index.html  wasm_bg.wasm
react-bootstrap/: package-lock.json  package.json  vite.config.js
react-bootstrap/src/: main.ts
wasm/: Cargo.toml  build.rs
wasm/src/: file.rs  lib.rs  main.rs  qr_code.rs  qr_code_data_format.proto  qr_code_data_format.rs
web/: App.tsx  app.tsx  import-map.json  index.html
web/components/: QrCodeReader.tsx
web/public/: wasm_bg.wasm
web/src/: App.tsx  index.tsx
web/src/js/: react-bootstrap.generated.js  wasm.generated.js
web/src/routes/: Generator.tsx
web/src/routes/Scanner/: QrCodeScanner.tsx  Webcam.tsx  index.tsx  saQrCodeDecoder.ts
web/src/utils/: breakpoints.ts  error.ts  useWasm.tsx
web/static/: wasm.generated.js  wasm_bg.wasm  zxing_reader.wasm
zxing-wasm/: README.md  core.ts
zxing-wasm/bindings/: binarizer.ts  characterSet.ts  contentType.ts  eanAddOnSymbol.ts  exposedReaderBindings.ts  exposedWriterBindings.ts  index.ts  readResult.ts  readerOptions.ts  textMode.ts  writerOptions.ts
zxing-wasm/reader/: index.ts  zxing_reader.js
