[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
authors = ["k-kuroguro"]
license = "MIT"

[liba]
crate-type = ["cdylib"]

[dependencies]
image = "^0.24"
qrcode = { git = "https://github.com/k-kuroguro/qrcode-rust", branch = "master" }

js-sys = "0.3.66"
web-sys = "0.3.66"

wasm-bindgen = "0.2.89"
