[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
authors = ["k-kuroguro"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
const_for = "0.1.3"
lz4_flex = "0.11.1"
image = "^0.24"
qrcode = { git = "https://github.com/k-kuroguro/qrcode-rust", branch = "master" }

js-sys = "0.3.66"
web-sys = "0.3.66"

wasm-bindgen = "0.2.89"

prost = "0.12"
prost-types = "0.12"

[build-dependencies]
prost-build = "0.5"
